# youtube-summary

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/examples/: examples.json  scrape_examples.py
app/utils/: langchain_utils.py  streamlit_utils.py
